package com.github.kereis.medit.domain.editor.actions

import com.github.kereis.medit.domain.editor.TextEditor

abstract class Command {

    abstract fun execute()
}
